<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emanuelsb.lucas.calculadoradearea.TelaPrincipal">

    <TextView
        android:id="@+id/TVselecaoFigura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecioneForma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998"
        app:layout_constraintHorizontal_bias="0.15" />

    <RadioGroup
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:weightSum="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/TVselecaoFigura"
        app:layout_constraintRight_toRightOf="@+id/TVselecaoFigura"
        app:layout_constraintTop_toBottomOf="@+id/TVselecaoFigura">

        <RadioButton
            android:id="@+id/quadrado"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/quadrado" />

        <RadioButton
            android:id="@+id/triangulo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/triangulo" />

        <RadioButton
            android:id="@+id/circulo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/circulo" />
    </RadioGroup>

    <Button
        android:id="@+id/avancar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avançar"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-22dp" />

</android.support.constraint.ConstraintLayout>
